resolve promises in addon

--- a/addon/templates/components/jane-maps.hbs
+++ b/addon/templates/components/jane-maps.hbs
@@ -1,5 +1,5 @@
 {{#if glSupported}}
-  {{#if map}}
+  {{#if (and map (is-fulfilled cartoSourcePromises))}}
     {{yield (hash
       call=(component 'mapbox-gl-call' obj=map)
       control=(component 'mapbox-gl-control' map=map)
