Add dummy page; add defensive programming against
setting prop on destroyed object

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,10 @@
 <h2 id="title">Welcome to Ember</h2>
 
-{{outlet}}
+{{jane-maps
+  id='map'
+  sources=sources
+  initOptions=(hash style='mapbox://styles/mapbox/light-v9'
+                    zoom=zoom
+                    center=center
+                    hash=false
+                    interactive=false)}}
