hotfix use openmaptiles

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -3,7 +3,7 @@
 {{jane-maps
   id='map'
   sources=sources
-  initOptions=(hash style='mapbox://styles/mapbox/light-v9'
+  initOptions=(hash style='//raw.githubusercontent.com/NYCPlanning/labs-gl-style/master/data/style.json'
                     zoom=zoom
                     center=center
                     hash=false
